20 Oct 2017
add: breadcrumbs to all pages except index page
update: staffpanel.php
update: view_mailbox.php

18 Oct 2017
remove: empty extra tools button from bbcode editor
update: tfreak news block format to match news block
replace: fast delete and fast edit images with font awesome icons

17 Oct 2017
update: database schema
add: missing images
fix: BBcode editor using 100% of available space
update: index news block
fix: admin news add/edit
update: captcha pages
remove: print_user_stuff function
remove: javascript to change button class on hover

14 Oct, 2017
update: admin cleanup log, moved disabled to last, instead of first
fix: lottery
update: Arcade and related files
update: index page forum posts, remove unneeded joins
fix: AJAX Chat kick/ban user
remove: destroy session from AJAX Chat so not logged out of site
fix: AJAX Chat endless loop when user is banned or disabled
remove: AJAX Chat channels from mysql
move: AJAX Chat online table to redis
move: AJAX Chat bans table to redis
begin: move AJAX-Chat from mysql to redis

9 Oct, 2017
remove: unneeded check for direct file access in files not in webroot
remove: geshi syntax highlighter
update: coders log
add: bbcode code for [code]

8 Oct, 2017
update: minified css and js files
remove: margin and padding on collapsed divs
remove: cleanup log
move: DB Backup config settings to db and site_config
remove: torrent.type from database
remove: torrent.username from database
update: pushed AJAX Chat to the borders
update: AJAX Chat to use same mysqli object as the rest of the site
add: anonymizer url to site settings and all links use this
add: simple logs viewer
remove: LogViewer
add: option to log all queries to the database
update: admin/site_config
remove: many inline style
update: index blocks -> torrents to uniform style
remove: excess borders on table-bordered

14 Sept, 2017
fix: cleanup manual run
fix: MOW
add: missing jquery-ui in merged and minified js files
fix: iCarousel centering